--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
 <body>
     <div class="container">
         <div class="item">
-            <a href="/screensaver/"><img src="쌈구머리.png"></a>
-            <a href="/screensaver/"><p>쌈구가 화면 보호해드려요</p></a>
+            <a href="./screensaver/"><img src="쌈구머리.png"></a>
+            <a href="./screensaver/"><p>쌈구가 화면 보호해드려요</p></a>
         </div>
         <div class="item">
-            <a href="/pingpong/"><img src="쌈구머리.png"></a>
-            <a href="/pingpong/"><p>쌈구 탁구</p></a>
+            <a href="./pingpong/"><img src="ssamgoo_pingpong.jpg"></a>
+            <a href="./pingpong/"><p>쌈구 탁구</p></a>
         </div>
         <div class="item">
-            <a href="//"><img src="쌈구머리.png"></a>
-            <a href="//"><p>이름</p></a>
+            <a href=".//"><img src="쌈구머리.png"></a>
+            <a href=".//"><p>이름</p></a>
         </div>
         <div class="item">
-            <a href="//"><img src="쌈구머리.png"></a>
-            <a href="//"><p>이름</p></a>
+            <a href=".//"><img src="쌈구머리.png"></a>
+            <a href=".//"><p>이름</p></a>
         </div>
         <div class="item">
-            <a href="//"><img src="쌈구머리.png"></a>
-            <a href="//"><p>이름</p></a>
+            <a href=".//"><img src="쌈구머리.png"></a>
+            <a href=".//"><p>이름</p></a>
         </div>
         <div class="item">
-            <a href="//"><img src="쌈구머리.png"></a>
-            <a href="//"><p>이름</p></a>
+            <a href=".//"><img src="쌈구머리.png"></a>
+            <a href=".//"><p>이름</p></a>
         </div>
         <div class="item">
-            <a href="//"><img src="쌈구머리.png"></a>
-            <a href="//"><p>이름</p></a>
+            <a href=".//"><img src="쌈구머리.png"></a>
+            <a href=".//"><p>이름</p></a>
         </div>
     </div>
 </body>
