--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -30,5 +30,7 @@
     <img id="ssamgoo_img" src="쌈구머리.png">
     <div class="bar" id="leftBar"><img src="쌈구머리.png"></div>
     <div class="bar" id="rightBar"><img src="쌈구머리.png"></div>
+    <div class="winOrLose" id="win"><h1>Win</h1></div>
+    <div class="winOrLose" id="lose"><h1>Lose</h1></div>
 </body>
 </html>
