add gameover screen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <div class="item">
-            <a href="./screensaver/"><img src="쌈구머리.png"></a>
+            <a href="./screensaver/"><img src="ssamgoo_screensaver.jpg"></a>
             <a href="./screensaver/"><p>쌈구가 화면 보호해드려요</p></a>
         </div>
         <div class="item">
