--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -32,5 +32,7 @@
     <div class="bar" id="rightBar"><img src="쌈구머리.png"></div>
     <div class="winOrLose" id="win"><h1>Win</h1></div>
     <div class="winOrLose" id="lose"><h1>Lose</h1></div>
+    <div id="gameover_img"><img src="gamover_img.png"></div>
+    <div id="reset_img"><a href="./"><img src="reset_img.png"></a></div>
 </body>
 </html>
