edit lobby message

--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
             <a href="./pingpong/"><p>쌈구 탁구</p></a>
         </div>
         <div class="item">
-            <a href=".//"><img src="쌈구머리.png"></a>
-            <a href=".//"><p>이름</p></a>
+            <a href="./"><img src="쌈구머리.png"></a>
+            <a href="./"><p>추후 공개 예정</p></a>
         </div>
         <div class="item">
-            <a href=".//"><img src="쌈구머리.png"></a>
-            <a href=".//"><p>이름</p></a>
+            <a href="./"><img src="쌈구머리.png"></a>
+            <a href="./"><p>추후 공개 예정</p></a>
         </div>
         <div class="item">
-            <a href=".//"><img src="쌈구머리.png"></a>
-            <a href=".//"><p>이름</p></a>
+            <a href="./"><img src="쌈구머리.png"></a>
+            <a href="./"><p>추후 공개 예정</p></a>
         </div>
         <div class="item">
-            <a href=".//"><img src="쌈구머리.png"></a>
-            <a href=".//"><p>이름</p></a>
+            <a href="./"><img src="쌈구머리.png"></a>
+            <a href="./"><p>추후 공개 예정</p></a>
         </div>
         <div class="item">
-            <a href=".//"><img src="쌈구머리.png"></a>
-            <a href=".//"><p>이름</p></a>
+            <a href="./"><img src="쌈구머리.png"></a>
+            <a href="./"><p>추후 공개 예정</p></a>
         </div>
     </div>
 </body>
