edit canvas css

--- a/convexlens/index.html
+++ b/convexlens/index.html
@@ -41,7 +41,7 @@
       Radius: <input type="number" />
     </label>
   </div>
-  <canvas></canvas>
+  <canvas style="max-width: 100%; max-height: 500px;"></canvas>
   <br />
   <button type="button">저장</button>
 </body>
