Add Convex Lens in main page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <a href="./pingpong/"><p>쌈구 탁구</p></a>
         </div>
         <div class="item">
-            <a href="./"><img src="쌈구머리.png"></a>
-            <a href="./"><p>추후 공개 예정</p></a>
+            <a href="./convexlens/"><img src="ssamgoo_convexlens.png"></a>
+            <a href="./convexlens/"><p>쌈구 볼록렌즈</p></a>
         </div>
         <div class="item">
             <a href="./"><img src="쌈구머리.png"></a>
